# AeroMail

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  PERFORMANCE.md  README.en.md  README.md  eslint.config.ts  index.html  latest.json  latest.json.example  package.json  paseo.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
DESIGN-IS-2026-06-22/: 00-scope.md  01-evidence.md  02-scorecard.md  03-verdict.md  04-handoff-prompt.md
docs/: PRD.md  UI设计系统.md  技术实现方案.md
packaging/arch/: PKGBUILD  aeromail.desktop
scripts/: check-i18n.ts  release-update.sh  run-dev.sh
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: account.rs  ai.rs  compose.rs  mail.rs  mod.rs  search.rs  settings.rs  sync.rs  todo.rs  translation.rs  update.rs  window.rs
src-tauri/src/db/: migrations.rs  mod.rs  pool.rs  schema.rs
src-tauri/src/models/: account.rs  ai.rs  compose.rs  error.rs  mail.rs  mod.rs  search.rs  todo.rs  translation.rs
src-tauri/src/services/: account_manager.rs  crypto.rs  imap_client.rs  logging.rs  mod.rs  oauth2.rs
src-tauri/src/services/ai/: chat.rs  client.rs  mod.rs  providers.rs  tokens.rs
src-tauri/src/services/ai/tools/: mcp.rs  mod.rs
src-tauri/src/services/compose/: draft.rs  imap_draft_sync.rs  mime_builder.rs  mod.rs  smtp_sender.rs
src-tauri/src/services/search/: mod.rs
src-tauri/src/services/sync/: mail_parser.rs  mod.rs  worker.rs
src-tauri/src/services/translation/: ai.rs  mod.rs  traditional.rs
src/components/: AccountForm.vue  AccountList.vue  AiAssistantPanel.vue  AiMessageList.vue  AiQuickActions.vue  AppSidebar.vue  BaseCheckbox.vue  BaseSelect.vue  BulkActions.vue  CommandPalette.vue  ContextMenu.vue  CustomScrollbar.vue  DateTimePicker.vue  LocaleSwitch.vue  MailList.vue  MailViewer.vue  MarkdownText.vue  MoveMailDialog.vue  SandboxedHtml.vue  SettingsErrorBoundary.vue  SkeletonBlock.vue  StatusBar.vue  ToastContainer.vue  TodoPanel.vue  TranslatePanel.vue
src/composables/: useAiChat.ts  useAiCompose.ts  useFontSizeExtension.ts  useIndentExtension.ts  useKeyboardShortcuts.ts  useLocale.ts  useLogConfig.ts  useResponsive.ts  useSearch.ts  useTableExtension.ts  useTauriInvoke.ts  useTheme.ts  useTiptap.ts  useTranslation.ts  useUpdater.ts  useWindowFrame.ts
src/i18n/: index.ts
src/layouts/: AppLayout.vue
src/stores/: account.ts  ai.ts  compose.ts  mail.ts  settings.ts  status.ts  toast.ts  todo.ts
src/styles/: fonts.css  theme.css
src/types/: account.ts  ai.ts  compose.ts  mail.ts  search.ts  translation.ts
(+38 files in other folders)
