[package]
name = "aeromail"
version = "0.0.25"
description = "AeroMail - Modern cross-platform email client"
authors = ["AeroMail Team"]
edition = "2024"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
rusqlite = { version = "0.34", features = ["bundled", "chrono", "uuid"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "local-time"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
futures = "0.3"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.9"
tantivy = "0.26"
tantivy-jieba = "0.20"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls", "pool"] }
html-escape = "0.2"
keyring = "3"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
dirs = "5"
md5 = "0.7"
tiktoken-rs = "0.12.0"
open = "5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

[profile.release]
strip = true
lto = true
opt-level = "s"
